    ForeignKeyConstraint, courtesy Ryan Kelly.
    [ticket:2502]

  - [feature] Added support for DELETE and UPDATE from
    an alias of a table, which would assumedly
    be related to itself elsewhere in the query,
    courtesy Ryan Kelly.  [ticket:2507]

  - [feature] select() features a correlate_except()
    method, auto correlates all selectables except those
    passed.

  - [feature] Added reduce_columns() method
    to select() construct, replaces columns inline
    using the util.reduce_columns utility function
    to remove equivalent columns.  reduce_columns()
    also adds "with_only_synonyms" to limit the
    reduction just to those columns which have the same
    name.  The deprecated fold_equivalents() feature is
    removed [ticket:1729].

  - [bug] All of UniqueConstraint, ForeignKeyConstraint,
    CheckConstraint, and PrimaryKeyConstraint will
    attach themselves to their parent table automatically
    when they refer to a Table-bound Column object directly
    (i.e. not just string column name), and refer to
    one and only one Table.   Prior to 0.8 this behavior
    occurred for UniqueConstraint and PrimaryKeyConstraint,
    but not ForeignKeyConstraint or CheckConstraint.
    [ticket:2410]

  - [bug] column.label(None) now produces an
    anonymous label, instead of returning the
    column object itself, consistent with the behavior
    of label(column, None).  [ticket:2168]

- sqlite
  - [feature] the SQLite date and time types
    have been overhauled to support a more open
    ended format for input and output, using
    name based format strings and regexps.  A
    new argument "microseconds" also provides
    the option to omit the "microseconds"
    portion of timestamps.  Thanks to
    Nathan Wright for the work and tests on
    this.  [ticket:2363]

- mssql
  - [feature] SQL Server dialect can be given
    database-qualified schema names,
    i.e. "schema='mydatabase.dbo'"; reflection